[package]
name = "geoapp-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.20.1"
actix = "0.13.0"
actix-web = "4.1.0"
postgres = { version = "0.19.4", features = ["with-serde_json-1"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
geojson = "0.23.0"
futures = "0.3.24"